welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: not found: value getIndication
  var i : Char = getIndication()
                 ^BDRBuggle:8: error: not found: value R
  if (i == R){
           ^BDRBuggle:13: error: not found: value L
  else if (i == L){
                ^BDRBuggle:18: error: not found: value I
  else if (i == I){
                ^BDRBuggle:24: error: not found: value A
  else if (i == A){
                ^BDRBuggle:28: error: not found: value B
  else if (i == B)
                ^BDRBuggle:31: error: not found: value C
  else if (i == C)
                ^BDRBuggle:34: error: not found: value Z
  else if (i == Z)
                ^BDRBuggle:37: error: not found: value Y
  else if (i == Y)
                ^BDRBuggle:40: error: not found: value X
  else if (i == X)
                ^